@@ -1,6 +1,8 @@
 0.14.0 (unreleased)
 -------------------
  - Global attributes are now always correctly handled as qualified. (#129)
+ - Fix parsing xml data containing simpleContent types (#136). 
+
 
 0.13.0 (2016-07-17)
 -------------------
